syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.org.example.zhc.rpc.proto";
option java_outer_classname = "GrpcServiceCallProto";

package rpc;

service TestServer {
  rpc RpcCall(Req) returns (Rsp) {}
  rpc ServerStreamCall(Req) returns (stream Rsp) {}
  rpc ClientStreamCall(stream Req) returns (Rsp) {}
  rpc BiStreamCall(stream Req) returns (stream Rsp) {}

}


message Req {
  string srcService = 1;
  string message = 2;
  repeated bytes msgContent = 3;
}

message Rsp {
  string message = 1;
  repeated bytes msgContent = 2;
}


